relcoord/namespace-relcoord.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relcoord
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: d51f2952e9c0320a
