relcoord/deployment-relcoord-noa-re.yaml
# Source: relcoord.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relcoord-noa-re
  labels:
    app: relcoord-noa-re
  namespace: relcoord
  annotations:
    noa.re/manifest-id: b3d1dabdf4d29c24
spec:
  replicas: 2
  selector:
    matchLabels:
      app: relcoord-noa-re
  template:
    metadata:
      labels:
        app: relcoord-noa-re
      annotations:
        checksum/config: e054a65853ebe09f59dcd735954c8087fc51eb94cf58382ee172f220965cb626
    spec:
      containers:
      - name: relcoord-noa-re
        image: public.ecr.aws/portswigger-platform/relcoord:0.2.0-2552c8b6
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: relcoord-noa-re-config
          mountPath: /config
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: relcoord-noa-re-config
        configMap:
          name: relcoord-noa-re-config
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: idmouse
              expirationSeconds: 3600
              audience: idmouse
          - serviceAccountToken:
              path: idcat.noa.re
              expirationSeconds: 3600
              audience: idcat.noa.re
