relcoord/service-relcoord-noa-re.yaml
# Source: relcoord.noa.re
apiVersion: v1
kind: Service
metadata:
  name: relcoord-noa-re
  namespace: relcoord
  annotations:
    noa.re/manifest-id: c79ab71e72948d00
spec:
  selector:
    app: relcoord-noa-re
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
