relcoord/gateway-relcoord-noa-re.yaml
# Source: relcoord.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: relcoord-noa-re
  namespace: relcoord
  annotations:
    noa.re/manifest-id: 82d1f6735f912384
spec:
  gatewayClassName: eg
  listeners:
  - name: relcoord-noa-re
    protocol: HTTPS
    hostname: relcoord.noa.re
    port: 443
    tls:
      certificateRefs:
      - name: relcoord-noa-re-tls
        group: ''
        kind: Secret
